--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ jdk:
   oraclejdk8
 
 install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - mvn clean package
 
 notifications:
